# sqlfluff-sqlmesh-templater

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/sqlfluff_templater_sqlmesh/: __init__.py  templater.py
tests/: bandit_baseline.json  test_templater.py
