[project]
name = "sqlfluff-templater-sqlmesh"
version = "0.1.0"
requires-python = ">=3.8"
description = "Lint your SQLMesh project SQL"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Alex Butler", email = "butler.alex2010@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Utilities",
  "Topic :: Software Development :: Quality Assurance",
]
keywords = [
  "sqlfluff",
  "sql",
  "linter",
  "formatter",
  "bigquery",
  "clickhouse",
  "databricks",
  "db2",
  "duckdb",
  "exasol",
  "greenplum",
  "hive",
  "materialize",
  "mysql",
  "postgres",
  "redshift",
  "snowflake",
  "soql",
  "sparksql",
  "sqlite",
  "teradata",
  "tsql",
  "sqlmesh",
]
dependencies = ["sqlfluff==3.2.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.sqlfluff]
sqlfluff_templater_sqlmesh = "sqlfluff_templater_sqlmesh"

[tool.setuptools.packages.find]
include = ["sqlfluff_templater_sqlmesh"]
